--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ra16-diploma",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://niksel00.github.io/ra16-diploma/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
