--- a/.env
+++ b/.env
@@ -1,7 +1,1 @@
-REACT_APP_SHOP_API=http://localhost:7070/api/
-REACT_APP_LINK_HOME=/
-REACT_APP_LINK_CATALOG=/catalog.html
-REACT_APP_LINK_CATALOG_ID=/catalog/
-REACT_APP_LINK_ABOUT=/about.html
-REACT_APP_LINK_CONTACTS=/contacts.html
-REACT_APP_LINK_CART=/cart.html
+REACT_APP_SERVER_URL=https://ra16-react-dipmloma.herokuapp.com/api/
