--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_SERVER_URL=https://ra16-react-dipmloma.herokuapp.com/api/
+REACT_APP_SERVER_URL=https://ra16-diplom-backend.herokuapp.com/api/
