--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_SHOP_API=http://localhost:7070/api/
-REACT_APP_LINK_HOME=/
-REACT_APP_LINK_CATALOG=/catalog.html
-REACT_APP_LINK_CATALOG_ID=/catalog/
-REACT_APP_LINK_ABOUT=/about.html
-REACT_APP_LINK_CONTACTS=/contacts.html
-REACT_APP_LINK_CART=/cart.html
+REACT_APP_LINK_HOME=http://localhost:7070/api/
+REACT_APP_LINK_CATALOG=http://localhost:7070/api/catalog.html
+REACT_APP_LINK_CATALOG_ID=http://localhost:7070/api/catalog/
+REACT_APP_LINK_ABOUT=http://localhost:7070/api/about.html
+REACT_APP_LINK_CONTACTS=http://localhost:7070/api/contacts.html
+REACT_APP_LINK_CART=http://localhost:7070/api/cart.html
